2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.mdp, Makefile.am,
	  MonoDevelop.Ide.Codons/FileFilterCodon.cs: Moved FileFilterCodon from
	  MD.Projects to MD.Ide (where the extension point is actually defined).

2007-08-14  Ankit Jain  <jankit@novell.com>

	Fix bug #82253.
	* MonoDevelop.Ide.Gui/Workbench.cs (DeleteLayout): Invoke event handlers
	for LayoutChanged.
	* gtk-gui/gui.stetic: Set ResponseId to OK for New button of NewLayoutDialog.
	* gtk-gui/*: Update.

2007-08-14  Ankit Jain  <jankit@novell.com>

	Fix bug #82280.
	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs: Add context menu with
	Open, Copy and SelectAll commands.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,
	  options/KeyBindingSchemeEmacs.xml,
	  options/KeyBindingSchemeVisualStudio.xml,
	  options/KeyBindingSchemeDefault.xml, MonoDevelop.Ide.addin.xml,
	  MonoDevelop.Ide.mdp, Makefile.am, MonoDevelop.Ide.Gui/Ide.cs: Load key
	  bindings from an extension point. Moved key bindings files from
	  MD.Components to here.

2007-08-08  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs, 
	  MonoDevelop.Ide.Gui.Dialogs/ReplaceDialog.cs, 
	  gtk-gui/gui.stetic: Change Entry for Find/Replace dialogs to ComboBoxEntry. 

2007-08-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/RenameItemDialog.cs, gtk-gui/gui.stetic,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.RenameItemDialog.cs: When perform
	  refactoring Rename on public class add posibility to rename file that
	  contains this class (interface). Patch by Sergey Shebanin.

2007-08-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs: Make the search results list
	  sortable. Fixes bug #82375.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,